--- a/index.html
+++ b/index.html
@@ -175,7 +175,29 @@
 						<script src="https://gist.github.com/carlosrojaso/78bb23615cc23c55ba11.js"></script>
 				</section>
 				<section>
-						
+						<script src="https://gist.github.com/carlosrojaso/d9dcf561588baf6282b3.js"></script>
+				</section>
+
+				<section>
+						<script src="https://gist.github.com/carlosrojaso/941b8b43e8f8cc9c185b.js"></script>
+				</section>
+				<section>
+						<script src="https://gist.github.com/carlosrojaso/acabf25cbc99345b137c.js"></script>
+				</section>
+				<section>
+						<script src="https://gist.github.com/carlosrojaso/e727596c1d38130bd2e7.js"></script>
+				</section>
+				<section>
+						<script src="https://gist.github.com/carlosrojaso/f29388ed39fc1f9990e2.js"></script>
+				</section>
+				<section>
+						<script src="https://gist.github.com/carlosrojaso/f3e88d43f02596e8c34f.js"></script>
+				</section>
+				<section>
+						<script src="https://gist.github.com/carlosrojaso/d1ca2b30b0a72361e126.js"></script>
+				</section>
+				<section>
+						<script src="https://gist.github.com/carlosrojaso/ac1ec25ad9c216f2a4fe.js"></script>
 				</section>
 				</section>
 
