--- a/noconflict/index.html
+++ b/noconflict/index.html
@@ -1,3 +1,10 @@
+<html>
+<head>
+</head>
+<body>
+	<div id="divhide">
+		Me van a esconder
+	</div>
 <!-- Putting jQuery into no-conflict mode. -->
 <script src="prototype.js"></script>
 <script src="jquery.min.js"></script>
@@ -7,7 +14,7 @@ var $j = jQuery.noConflict();
 // $j is now an alias to the jQuery function; creating the new alias is optional.
  
 $j(document).ready(function() {
-    $j( "div" ).hide();
+    $j( "#divhide" ).hide();
 });
  
 // The $ variable now has the prototype meaning, which is a shortcut for
