--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<title>Jquery</title>
 
-		<meta name="description" content="Diseño Web con HTML5, CSS3, jQuery Nivel Básico">
+		<meta name="description" content="Jquery - Usando interactividad en la WEB.">
 		<meta name="author" content="Carlos Rojas">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -64,7 +64,6 @@
 						<ul>
 						<li>PHP</li>
 						<li>Javascript</li>
-						<li>Enfocado en Moviles</li>
 						<li>algo de Python</li>
 						</ul>
 					</section>
@@ -76,8 +75,8 @@
 						<li>WML</li>
 						<li>XHTML</li>
 						<li>Phonegap</li>
-						<li>Java</li>
-						<li>Objetive-C</li>
+						<li>Padawan en Java</li>
+						<li>Padawan en Objetive-C</li>
 						</ul>
 					</section>
 				</section>
@@ -127,7 +126,17 @@
 
 				<section>
 					<section>	
+						<a href="#" class="image navigate-down">
 						<img src="images/jquery.png" style="border:0" />
+					    </a>
+					</section>
+					<section>
+						<ul>
+						<li>Eventos</li>
+						<li>Efectos</li>
+						<li>AJAX</li>
+						<li>Plugins</li>
+						</ul>
 					</section>
 				</section>
 
@@ -199,6 +208,23 @@
 				<section>
 						<script src="https://gist.github.com/carlosrojaso/ac1ec25ad9c216f2a4fe.js"></script>
 				</section>
+				</section>
+
+				<section>
+					<section>
+						<a href="#" class="image navigate-down">
+							<img src="images/jqueryui.png" />
+						</a>
+					</section>
+					<section>
+						<h2>JQuery UI</h2>
+						<ul>
+						<li>Interacciones</li>
+						<li>Widgets</li>
+						<li>Efectos</li>
+						<li>Utilidades</li>
+						</ul>
+					</section>
 				</section>
 
 		</div>			
