--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<h2>Agenda</h2>
 						
 						<a href="#" class="image navigate-down">
-							<img src="images/schedule.png" />
+							<img src="images/schedule.png"  />
 						</a>
 					</section>
 					<section>
@@ -145,7 +145,7 @@
 						<h2>May the code be wit you...</h2>
 						
 						<a href="#" class="image navigate-down">
-							<img src="images/yoda.png" />
+							<img src="images/yoda.png" style="border:0" />
 						</a>
 					</section>
 					<section>
@@ -213,7 +213,7 @@
 				<section>
 					<section>
 						<a href="#" class="image navigate-down">
-							<img src="images/jqueryui.png" />
+							<img src="images/jqueryui.png" style="border:0" />
 						</a>
 					</section>
 					<section>
@@ -223,6 +223,37 @@
 						<li>Widgets</li>
 						<li>Efectos</li>
 						<li>Utilidades</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>UX / UI con Estilo...</h2>
+						<a href="#" class="image navigate-down">
+							<img src="images/gangnamstyle.png" style="border:0" />
+						</a>
+					</section>
+					<section>
+						<p>jqueryui.com/demos</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<a href="#" class="image navigate-down">
+							<img src="images/jquerymobile.png" style="border:0" />
+						</a>
+					</section>
+					<section>
+						<h2>JQuery Mobile</h2>
+						<ul>
+						<li>Introduccion</li>
+						<li>Pages &amp; Dialogs</li>
+						<li>Ajax Navigation &amp; Transitions</li>
+						<li>Content &amp; Widgets</li>
+						<li>Diseño Adaptable (RWD)</li>
+						<li>Theming</li>
 						</ul>
 					</section>
 				</section>
