--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@
 						<li>Theming</li>
 						</ul>
 					</section>
+					<section>
+						demos.jquerymobile.com/1.4.2/
+					</section>
 				</section>
 
 		</div>			
