cambio de titulo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>JQuery para NO desarrolladores.</h1>
+					<h1>JQuery</h1>
 					<h6>carlosrojaso.github.io/cursoJQUERY</h3>
 					<p>
 						<small>Dirigido por: <a href="http://www.carlosrojasblog.com">Carlos Rojas</a> / <a href="http://twitter.com/carlosrojas_o">@carlosrojas_o</a></small>
